workloads/node-demo-app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: node-demo-app
  labels:
    app: node-demo-app
  annotations:
    link.argocd.argoproj.io/external-link: https://node-demo-app.invisitr.com
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: node-demo-app
  template:
    metadata:
      labels:
        app: node-demo-app
    spec:
      containers:
      - name: node-demo-app
        image: invisitr/node-demo-app:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    blueGreen:
      autoPromotionSeconds: 300
      activeService: node-demo-app
      previewService: node-demo-app-vnext
